apps/haste/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: haste-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: haste-http-port
      protocol: HTTP
    hosts:
      - haste.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: haste-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: haste.simplefxn.com
    hosts:
      - haste.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: haste-vs
  namespace: istio-system
spec:
  hosts:
  - "haste.simplefxn.com"
  gateways:
  - haste-gateway
  http:
  - route:
    - destination:
        host: haste-haste-server.apps.svc.cluster.local
        port:
          number: 7777
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: haste
  namespace: istio-system
spec:
  host: haste-haste-server.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
